...
    AppDestination(
      label: 'Calculator',
      icon: Icons.calculate_outlined,
      selectedIcon: Icons.calculate_rounded,
    ),
    AppDestination(
      label: 'Learn',
      icon: Icons.school_outlined,
      selectedIcon: Icons.school_rounded,
    ),
    AppDestination(
      label: 'Reports',
      icon: Icons.summarize_outlined,
...
